Update html page

--- a/html/2-image.html
+++ b/html/2-image.html
@@ -175,7 +175,7 @@
 
             <div>
                 <canvas class="image" id="image0" width="_WIDTH_px" height="_HEIGHT_px"
-                        onclick="togglePause(0, 'http://camera-gear:5800/image.jpg')"></canvas>
+                        onclick="togglePause(0, 'http://camera-gear.local:5800/image.jpg')"></canvas>
             </div>
         </td>
         <td>
@@ -192,7 +192,7 @@
 
             <div>
                 <canvas class="image" id="image1" width="_WIDTH_px" height="_HEIGHT_px"
-                        onclick="togglePause(1, 'http://camera-rope:5800/image.jpg')"></canvas>
+                        onclick="togglePause(1, 'http://camera-rope.local:5800/image.jpg')"></canvas>
             </div>
         </td>
     </tr>
