Update html page

--- a/html/2-image.html
+++ b/html/2-image.html
@@ -85,11 +85,11 @@
 
         window.onload = function () {
             document.getElementById('header0').innerHTML = "Gear Camera (_DELAY_SECS_ secs)";
-            setButton(0);
+            setButton0();
             loadImage0();
 
             document.getElementById('header1').innerHTML = "Rope Camera (_DELAY_SECS_ secs)";
-            setButton(1);
+            setButton1();
             loadImage1();
         };
 
