--- a/html/2-image.html
+++ b/html/2-image.html
@@ -207,6 +207,9 @@
             <div>
                 <canvas class="image" id="image0" width="_WIDTH_px" height="_HEIGHT_px"
                         onclick="togglePause0()"></canvas>
+                <div>
+                    <input type="button" class="pause" id="pause0" value="Pause" onclick="togglePause0()">
+                </div>
             </div>
         </td>
         <td>
@@ -224,6 +227,9 @@
             <div>
                 <canvas class="image" id="image1" width="_WIDTH_px" height="_HEIGHT_px"
                         onclick="togglePause1()"></canvas>
+            </div>
+            <div>
+                <input type="button" class="pause" id="pause1" value="Pause" onclick="togglePause1()">
             </div>
         </td>
     </tr>
