--- a/html/2-image.html
+++ b/html/2-image.html
@@ -100,14 +100,14 @@
                 warning0 = document.getElementById('status0')
                 image0 = new Image();
                 image0.onload = function(){
-                    warning0.innerHTML = "Connected to camera gear server";
+                    warning0.innerHTML = "Connected to gear camera";
                     warning0.style.backgroundColor = green
                     ctx = document.getElementById('image0').getContext('2d');
                     ctx.drawImage(image0, 0, 0);
                     setTimeout(function(){ loadImage0(); }, _DELAY_SECS_ * 1000);
                 };
                 image0.onerror = function(){
-                    warning0.innerHTML = "Disconnected from camera gear server";
+                    warning0.innerHTML = "Disconnected from gear camera";
                     warning0.style.backgroundColor = red
                     setTimeout(function(){ loadImage0(); },  1000);
                 }
@@ -120,14 +120,14 @@
                 warning1 = document.getElementById('status1')
                 image1 = new Image();
                 image1.onload = function(){
-                    warning1.innerHTML = "Connected to camera rope server";
+                    warning1.innerHTML = "Connected to rope camera";
                     warning1.style.backgroundColor = green
                     ctx = document.getElementById('image1').getContext('2d');
                     ctx.drawImage(image1, 0, 0);
                     setTimeout(function(){ loadImage1(); }, _DELAY_SECS_ * 1000);
                 };
                 image1.onerror = function(){
-                    warning1.innerHTML = "Disconnected from camera rope server";
+                    warning1.innerHTML = "Disconnected from rope camera";
                     warning1.style.backgroundColor = red
                     setTimeout(function(){ loadImage1(); },  1000);
                 }
