--- a/html/2-image-hard-code.html
+++ b/html/2-image-hard-code.html
@@ -76,6 +76,7 @@
           box-shadow: 0 5px #666;
           transform: translateY(4px);
         }
+
     </style>
 
     <script>
@@ -92,47 +93,46 @@
 
             document.getElementById('header1').innerHTML = "Rope Camera (_DELAY_SECS_ secs)";
             setButton1();
-            loadImage1(1);
+            loadImage1();
         };
 
         function loadImage0() {
             if (!(paused[0])) {
-                warning = document.getElementById('status0')
-                image = new Image();
-                image.onload = function(){
-                    warning.innerHTML = "Connected to gear camera";
-                    warning.style.backgroundColor = green
+                warning0 = document.getElementById('status0')
+                image0 = new Image();
+                image0.onload = function(){
+                    warning0.innerHTML = "Connected to gear camera";
+                    warning0.style.backgroundColor = green
                     ctx = document.getElementById('image0').getContext('2d');
                     ctx.drawImage(image0, 0, 0);
                     setTimeout(function(){ loadImage0(); }, _DELAY_SECS_ * 1000);
                 };
-                image.onerror = function(){
-                    warning.innerHTML = "Disconnected from gear camera";
-                    warning.style.backgroundColor = red
+                image0.onerror = function(){
+                    warning0.innerHTML = "Disconnected from gear camera";
+                    warning0.style.backgroundColor = red
                     setTimeout(function(){ loadImage0(); },  1000);
                 }
-                image.src = gear_url;
+                image0.src = gear_url;
             }
         }
 
-        function loadImage1(num) {
-            num_str = num.toString()
-            if (!(paused[num])) {
-                warning = document.getElementById('status' + num_str)
-                image = new Image();
-                image.onload = function(){
-                    warning.innerHTML = "Connected to rope camera";
-                    warning.style.backgroundColor = green
-                    ctx = document.getElementById('image' + num_str).getContext('2d');
-                    ctx.drawImage(image, 0, 0);
-                    setTimeout(function(){ loadImage1(num); }, _DELAY_SECS_ * 1000);
+        function loadImage1() {
+            if (!(paused[1])) {
+                warning1 = document.getElementById('status1')
+                image1 = new Image();
+                image1.onload = function(){
+                    warning1.innerHTML = "Connected to rope camera";
+                    warning1.style.backgroundColor = green
+                    ctx = document.getElementById('image1').getContext('2d');
+                    ctx.drawImage(image1, 0, 0);
+                    setTimeout(function(){ loadImage1(); }, _DELAY_SECS_ * 1000);
                 };
-                image.onerror = function(){
-                    warning.innerHTML = "Disconnected from rope camera";
-                    warning.style.backgroundColor = red
-                    setTimeout(function(){ loadImage1(num); },  1000);
+                image1.onerror = function(){
+                    warning1.innerHTML = "Disconnected from rope camera";
+                    warning1.style.backgroundColor = red
+                    setTimeout(function(){ loadImage1(); },  1000);
                 }
-                image.src = rope_url;
+                image1.src = rope_url;
             }
         }
 
@@ -165,12 +165,13 @@
         function togglePause1() {
             paused[1] = !(paused[1])
             setButton1()
-            loadImage1(1);
+            loadImage1();
         }
 
         function refreshDelay(time) {
             window.location.href = "/image?delay=" + time;
         }
+
 
 
     </script>
