--- a/html/2-image.html
+++ b/html/2-image.html
@@ -103,7 +103,7 @@
                     warning.innerHTML = "Connected to gear camera";
                     warning.style.backgroundColor = green
                     ctx = document.getElementById('image0').getContext('2d');
-                    ctx.drawImage(image0, 0, 0);
+                    ctx.drawImage(image, 0, 0);
                     setTimeout(function(){ loadImage0(); }, _DELAY_SECS_ * 1000);
                 };
                 image.onerror = function(){
@@ -119,20 +119,20 @@
             num_str = num.toString()
             if (!(paused[num])) {
                 warning = document.getElementById('status' + num_str)
-                image = new Image();
-                image.onload = function(){
+                image1 = new Image();
+                image1.onload = function(){
                     warning.innerHTML = "Connected to rope camera";
                     warning.style.backgroundColor = green
                     ctx = document.getElementById('image' + num_str).getContext('2d');
-                    ctx.drawImage(image, 0, 0);
+                    ctx.drawImage(image1, 0, 0);
                     setTimeout(function(){ loadImage1(num); }, _DELAY_SECS_ * 1000);
                 };
-                image.onerror = function(){
+                image1.onerror = function(){
                     warning.innerHTML = "Disconnected from rope camera";
                     warning.style.backgroundColor = red
                     setTimeout(function(){ loadImage1(num); },  1000);
                 }
-                image.src = rope_url;
+                image1.src = rope_url;
             }
         }
 
