--- a/html/2-image.html
+++ b/html/2-image.html
@@ -88,28 +88,29 @@
         window.onload = function () {
             document.getElementById('header0').innerHTML = "Gear Camera (_DELAY_SECS_ secs)";
             setButton0();
-            loadImage0();
+            loadImage0()0;
 
             document.getElementById('header1').innerHTML = "Rope Camera (_DELAY_SECS_ secs)";
             setButton1();
             loadImage1(1);
         };
 
-        function loadImage0() {
+        function loadImage0(num) {
+            num_str = num.toString()
             if (!(paused[0])) {
-                warning = document.getElementById('status0')
+                warning = document.getElementById('status' + num_str)
                 image = new Image();
                 image.onload = function(){
                     warning.innerHTML = "Connected to gear camera";
                     warning.style.backgroundColor = green
-                    ctx = document.getElementById('image0').getContext('2d');
-                    ctx.drawImage(image, 0, 0);
-                    setTimeout(function(){ loadImage0(); }, _DELAY_SECS_ * 1000);
+                    img = document.getElementById('image' + num_str);
+                    img.getContext('2d').drawImage(image, 0, 0);
+                    setTimeout(function(){ loadImage0(num); }, _DELAY_SECS_ * 1000);
                 };
                 image.onerror = function(){
                     warning.innerHTML = "Disconnected from gear camera";
                     warning.style.backgroundColor = red
-                    setTimeout(function(){ loadImage0(); },  1000);
+                    setTimeout(function(){ loadImage0(num); },  1000);
                 }
                 image.src = gear_url;
             }
@@ -123,8 +124,8 @@
                 image1.onload = function(){
                     warning.innerHTML = "Connected to rope camera";
                     warning.style.backgroundColor = green
-                    ctx = document.getElementById('image' + num_str).getContext('2d');
-                    ctx.drawImage(image1, 0, 0);
+                    img = document.getElementById('image' + num_str);
+                    img.getContext('2d').drawImage(image1, 0, 0);
                     setTimeout(function(){ loadImage1(num); }, _DELAY_SECS_ * 1000);
                 };
                 image1.onerror = function(){
@@ -159,7 +160,7 @@
         function togglePause0() {
             paused[0] = !(paused[0])
             setButton0()
-            loadImage0();
+            loadImage0(0);
         }
 
         function togglePause1() {
