--- a/html/2-image.html
+++ b/html/2-image.html
@@ -88,7 +88,7 @@
         window.onload = function () {
             document.getElementById('header0').innerHTML = "Gear Camera (_DELAY_SECS_ secs)";
             setButton0();
-            loadImage0()0;
+            loadImage0(0);
 
             document.getElementById('header1').innerHTML = "Rope Camera (_DELAY_SECS_ secs)";
             setButton1();
