--- a/html/2-image.html
+++ b/html/2-image.html
@@ -124,7 +124,7 @@
                 image1.onload = function(){
                     warning.innerHTML = "Connected to rope camera";
                     warning.style.backgroundColor = green
-                    img = document.getElementById('image' + num_str);
+                    img = document.getElementById('image1');
                     img.getContext('2d').drawImage(image1, 0, 0);
                     setTimeout(function(){ loadImage1(num); }, _DELAY_SECS_ * 1000);
                 };
