--- a/html/2-image.html
+++ b/html/2-image.html
@@ -103,7 +103,7 @@
                 image.onload = function(){
                     warning.innerHTML = "Connected to gear camera";
                     warning.style.backgroundColor = green
-                    img = document.getElementById('image' + num_str);
+                    img = document.getElementById('image_' + num_str);
                     img.getContext('2d').drawImage(image, 0, 0);
                     setTimeout(function(){ loadImage0(num); }, _DELAY_SECS_ * 1000);
                 };
@@ -124,7 +124,7 @@
                 image1.onload = function(){
                     warning.innerHTML = "Connected to rope camera";
                     warning.style.backgroundColor = green
-                    img = document.getElementById('image1');
+                    img = document.getElementById('image_1');
                     img.getContext('2d').drawImage(image1, 0, 0);
                     setTimeout(function(){ loadImage1(num); }, _DELAY_SECS_ * 1000);
                 };
@@ -217,7 +217,7 @@
             </table>
 
             <div>
-                <canvas class="image" id="image0" width="_WIDTH_px" height="_HEIGHT_px"
+                <canvas class="image" id="image_0" width="_WIDTH_px" height="_HEIGHT_px"
                         onclick="togglePause0()"></canvas>
                 <div>
                     <input type="button" class="pause" id="pause0" value="Pause" onclick="togglePause0()">
@@ -237,7 +237,7 @@
             </table>
 
             <div>
-                <canvas class="image" id="image1" width="_WIDTH_px" height="_HEIGHT_px"
+                <canvas class="image" id="image_1" width="_WIDTH_px" height="_HEIGHT_px"
                         onclick="togglePause1()"></canvas>
             </div>
             <div>
