--- a/html/2-image.html
+++ b/html/2-image.html
@@ -143,7 +143,7 @@
             button0.style.backgroundColor = color;
             button0.value = paused[0] ? 'Resume' : 'Pause';
 
-            image0 = document.getElementById('image0');
+            image0 = document.getElementById('image_0');
             image0.style.borderColor = color;
         }
 
@@ -153,7 +153,7 @@
             button1.style.backgroundColor = color;
             button1.value = paused[1] ? 'Resume' : 'Pause';
 
-            image1 = document.getElementById('image1');
+            image1 = document.getElementById('image_1');
             image1.style.borderColor = color;
         }
 
