--- a/html/2-image-flash.html
+++ b/html/2-image-flash.html
@@ -76,7 +76,6 @@
           box-shadow: 0 5px #666;
           transform: translateY(4px);
         }
-
     </style>
 
     <script>
@@ -89,89 +88,90 @@
         window.onload = function () {
             document.getElementById('header0').innerHTML = "Gear Camera (_DELAY_SECS_ secs)";
             setButton0();
-            loadImage0();
+            loadImage0(0);
 
             document.getElementById('header1').innerHTML = "Rope Camera (_DELAY_SECS_ secs)";
             setButton1();
-            loadImage1();
+            loadImage1(1);
         };
 
-        function loadImage0() {
+        function loadImage0(num) {
+            num_str = num.toString()
             if (!(paused[0])) {
-                warning0 = document.getElementById('status0')
-                image0 = new Image();
-                image0.onload = function(){
-                    warning0.innerHTML = "Connected to gear camera";
-                    warning0.style.backgroundColor = green
-                    ctx = document.getElementById('image0').getContext('2d');
-                    ctx.drawImage(image0, 0, 0);
-                    setTimeout(function(){ loadImage0(); }, _DELAY_SECS_ * 1000);
+                warning = document.getElementById('status' + num_str)
+                image = new Image();
+                image.onload = function(){
+                    warning.innerHTML = "Connected to gear camera";
+                    warning.style.backgroundColor = green
+                    img = document.getElementById('image_' + num_str);
+                    img.getContext('2d').drawImage(image, 0, 0);
+                    setTimeout(function(){ loadImage0(num); }, _DELAY_SECS_ * 1000);
                 };
-                image0.onerror = function(){
-                    warning0.innerHTML = "Disconnected from gear camera";
-                    warning0.style.backgroundColor = red
-                    setTimeout(function(){ loadImage0(); },  1000);
+                image.onerror = function(){
+                    warning.innerHTML = "Disconnected from gear camera";
+                    warning.style.backgroundColor = red
+                    setTimeout(function(){ loadImage0(num); },  1000);
                 }
-                image0.src = gear_url;
+                image.src = gear_url;
             }
         }
 
-        function loadImage1() {
-            if (!(paused[1])) {
-                warning1 = document.getElementById('status1')
-                image1 = new Image();
-                image1.onload = function(){
-                    warning1.innerHTML = "Connected to rope camera";
-                    warning1.style.backgroundColor = green
-                    ctx = document.getElementById('image1').getContext('2d');
-                    ctx.drawImage(image1, 0, 0);
-                    setTimeout(function(){ loadImage1(); }, _DELAY_SECS_ * 1000);
+        function loadImage1(num) {
+            num_str = num.toString()
+            if (!(paused[num])) {
+                warning = document.getElementById('status' + num_str)
+                image = new Image();
+                image.onload = function(){
+                    warning.innerHTML = "Connected to rope camera";
+                    warning.style.backgroundColor = green
+                    img = document.getElementById('image_1');
+                    img.getContext('2d').drawImage(image, 0, 0);
+                    setTimeout(function(){ loadImage1(num); }, _DELAY_SECS_ * 1000);
                 };
-                image1.onerror = function(){
-                    warning1.innerHTML = "Disconnected from rope camera";
-                    warning1.style.backgroundColor = red
-                    setTimeout(function(){ loadImage1(); },  1000);
+                image.onerror = function(){
+                    warning.innerHTML = "Disconnected from rope camera";
+                    warning.style.backgroundColor = red
+                    setTimeout(function(){ loadImage1(num); },  1000);
                 }
-                image1.src = rope_url;
+                image.src = rope_url;
             }
         }
 
         function setButton0() {
             color = paused[0] ? red : green
-            button0 = document.getElementById('pause0');
-            button0.style.backgroundColor = color;
-            button0.value = paused[0] ? 'Resume' : 'Pause';
+            button = document.getElementById('pause0');
+            button.style.backgroundColor = color;
+            button.value = paused[0] ? 'Resume' : 'Pause';
 
-            image0 = document.getElementById('image0');
-            image0.style.borderColor = color;
+            image = document.getElementById('image_0');
+            image.style.borderColor = color;
         }
 
         function setButton1() {
             color = paused[1] ? red : green
-            button1 = document.getElementById('pause1');
-            button1.style.backgroundColor = color;
-            button1.value = paused[1] ? 'Resume' : 'Pause';
+            button = document.getElementById('pause1');
+            button.style.backgroundColor = color;
+            button.value = paused[1] ? 'Resume' : 'Pause';
 
-            image1 = document.getElementById('image1');
-            image1.style.borderColor = color;
+            image = document.getElementById('image_1');
+            image.style.borderColor = color;
         }
 
         function togglePause0() {
             paused[0] = !(paused[0])
             setButton0()
-            loadImage0();
+            loadImage0(0);
         }
 
         function togglePause1() {
             paused[1] = !(paused[1])
             setButton1()
-            loadImage1();
+            loadImage1(1);
         }
 
         function refreshDelay(time) {
             window.location.href = "/image?delay=" + time;
         }
-
 
 
     </script>
@@ -217,7 +217,7 @@
             </table>
 
             <div>
-                <canvas class="image" id="image0" width="_WIDTH_px" height="_HEIGHT_px"
+                <canvas class="image" id="image_0" width="_WIDTH_px" height="_HEIGHT_px"
                         onclick="togglePause0()"></canvas>
                 <div>
                     <input type="button" class="pause" id="pause0" value="Pause" onclick="togglePause0()">
@@ -237,7 +237,7 @@
             </table>
 
             <div>
-                <canvas class="image" id="image1" width="_WIDTH_px" height="_HEIGHT_px"
+                <canvas class="image" id="image_1" width="_WIDTH_px" height="_HEIGHT_px"
                         onclick="togglePause1()"></canvas>
             </div>
             <div>
