--- a/html/2-image-flash.html
+++ b/html/2-image-flash.html
@@ -82,8 +82,10 @@
         var red = '#FF3B22'
         var green = '#14CC06'
         var paused = [false, false];
-        var gear_url = 'http://camera-gear.local:5800/image.jpg'
-        var rope_url = 'http://camera-rope.local:5800/image.jpg'
+        var status_vals = 'status0', 'status1']
+        var image_vals = 'image_0', 'image_1']
+        var urls['http://camera-gear.local:5800/image.jpg',
+                 'http://camera-rope.local:5800/image.jpg']
 
         window.onload = function () {
             document.getElementById('header0').innerHTML = "Gear Camera (_DELAY_SECS_ secs)";
@@ -96,14 +98,13 @@
         };
 
         function loadImage0(num) {
-            num_str = num.toString()
             if (!(paused[0])) {
-                warning = document.getElementById('status' + num_str)
+                warning = document.getElementById(status_vals[num])
                 image = new Image();
                 image.onload = function(){
                     warning.innerHTML = "Connected to gear camera";
                     warning.style.backgroundColor = green
-                    img = document.getElementById('image_' + num_str);
+                    img = document.getElementById(image_vals[num]);
                     img.getContext('2d').drawImage(image, 0, 0);
                     setTimeout(function(){ loadImage0(num); }, _DELAY_SECS_ * 1000);
                 };
@@ -112,19 +113,18 @@
                     warning.style.backgroundColor = red
                     setTimeout(function(){ loadImage0(num); },  1000);
                 }
-                image.src = gear_url;
+                image.src = urls[0];
             }
         }
 
         function loadImage1(num) {
-            num_str = num.toString()
             if (!(paused[num])) {
-                warning = document.getElementById('status' + num_str)
+                warning = document.getElementById(status_vals[num])
                 image = new Image();
                 image.onload = function(){
                     warning.innerHTML = "Connected to rope camera";
                     warning.style.backgroundColor = green
-                    img = document.getElementById('image_1');
+                    img = document.getElementById(image_vals[num]);
                     img.getContext('2d').drawImage(image, 0, 0);
                     setTimeout(function(){ loadImage1(num); }, _DELAY_SECS_ * 1000);
                 };
@@ -133,7 +133,7 @@
                     warning.style.backgroundColor = red
                     setTimeout(function(){ loadImage1(num); },  1000);
                 }
-                image.src = rope_url;
+                image.src = urls[1];
             }
         }
 
