--- a/html/2-image-flash.html
+++ b/html/2-image-flash.html
@@ -84,7 +84,7 @@
         var paused = [false, false];
         var status_vals = ['status_0', 'status_1']
         var image_vals = ['image_0', 'image_1']
-        var urls['http://camera-gear.local:5800/image.jpg', 'http://camera-rope.local:5800/image.jpg']
+        var urls = ['http://camera-gear.local:5800/image.jpg', 'http://camera-rope.local:5800/image.jpg']
 
         window.onload = function () {
             document.getElementById('header_0').innerHTML = "Gear Camera (_DELAY_SECS_ secs)";
