--- a/html/2-image.html
+++ b/html/2-image.html
@@ -76,104 +76,63 @@
           box-shadow: 0 5px #666;
           transform: translateY(4px);
         }
-
     </style>
 
     <script>
         var red = '#FF3B22'
         var green = '#14CC06'
         var paused = [false, false];
-        var gear_url = 'http://camera-gear.local:5800/image.jpg'
-        var rope_url = 'http://camera-rope.local:5800/image.jpg'
+        var urls = ['http://camera-gear.local:5800/image.jpg', 'http://camera-rope.local:5800/image.jpg']
 
         window.onload = function () {
-            document.getElementById('header0').innerHTML = "Gear Camera (_DELAY_SECS_ secs)";
-            setButton0();
-            loadImage0();
+            document.getElementById('header_0').innerHTML = "Gear Camera (_DELAY_SECS_ secs)";
+            setButton(0);
+            loadImage(0);
 
-            document.getElementById('header1').innerHTML = "Rope Camera (_DELAY_SECS_ secs)";
-            setButton1();
-            loadImage1();
+            document.getElementById('header_1').innerHTML = "Rope Camera (_DELAY_SECS_ secs)";
+            setButton(1);
+            loadImage(1);
         };
 
-        function loadImage0() {
+        function loadImage(num) {
             if (!(paused[0])) {
-                warning0 = document.getElementById('status0')
-                image0 = new Image();
-                image0.onload = function(){
-                    warning0.innerHTML = "Connected to gear camera";
-                    warning0.style.backgroundColor = green
-                    ctx = document.getElementById('image0').getContext('2d');
-                    ctx.drawImage(image0, 0, 0);
-                    setTimeout(function(){ loadImage0(); }, _DELAY_SECS_ * 1000);
+                var warning = document.getElementById('status_' + num)
+                var image = new Image();
+                image.onload = function(){
+                    warning.innerHTML = "Connected to gear camera";
+                    warning.style.backgroundColor = green
+                    img = document.getElementById('image_' + num]);
+                    img.getContext('2d').drawImage(image, 0, 0);
+                    setTimeout(function(){ loadImage(num); }, _DELAY_SECS_ * 1000);
                 };
-                image0.onerror = function(){
-                    warning0.innerHTML = "Disconnected from gear camera";
-                    warning0.style.backgroundColor = red
-                    setTimeout(function(){ loadImage0(); },  1000);
+                image.onerror = function(){
+                    warning.innerHTML = "Disconnected from gear camera";
+                    warning.style.backgroundColor = red
+                    setTimeout(function(){ loadImage(num); },  1000);
                 }
-                image0.src = gear_url;
+                image.src = urls[num];
             }
         }
 
-        function loadImage1() {
-            if (!(paused[1])) {
-                warning1 = document.getElementById('status1')
-                image1 = new Image();
-                image1.onload = function(){
-                    warning1.innerHTML = "Connected to rope camera";
-                    warning1.style.backgroundColor = green
-                    ctx = document.getElementById('image1').getContext('2d');
-                    ctx.drawImage(image1, 0, 0);
-                    setTimeout(function(){ loadImage1(); }, _DELAY_SECS_ * 1000);
-                };
-                image1.onerror = function(){
-                    warning1.innerHTML = "Disconnected from rope camera";
-                    warning1.style.backgroundColor = red
-                    setTimeout(function(){ loadImage1(); },  1000);
-                }
-                image1.src = rope_url;
-            }
+        function setButton(num) {
+            var color = paused[num] ? red : green
+            var button = document.getElementById('pause_' + num);
+            button.style.backgroundColor = color;
+            button.value = paused[num] ? 'Resume' : 'Pause';
+
+            var image = document.getElementById('image_' + num);
+            image.style.borderColor = color;
         }
 
-        function setButton0() {
-            color = paused[0] ? red : green
-            button0 = document.getElementById('pause0');
-            button0.style.backgroundColor = color;
-            button0.value = paused[0] ? 'Resume' : 'Pause';
-
-            image0 = document.getElementById('image0');
-            image0.style.borderColor = color;
-        }
-
-        function setButton1() {
-            color = paused[1] ? red : green
-            button1 = document.getElementById('pause1');
-            button1.style.backgroundColor = color;
-            button1.value = paused[1] ? 'Resume' : 'Pause';
-
-            image1 = document.getElementById('image1');
-            image1.style.borderColor = color;
-        }
-
-        function togglePause0() {
-            paused[0] = !(paused[0])
-            setButton0()
-            loadImage0();
-        }
-
-        function togglePause1() {
-            paused[1] = !(paused[1])
-            setButton1()
-            loadImage1();
+        function togglePause(num) {
+            paused[num] = !(paused[num])
+            setButton(num)
+            loadImage(num);
         }
 
         function refreshDelay(time) {
             window.location.href = "/image?delay=" + time;
         }
-
-
-
     </script>
 </head>
 
@@ -208,19 +167,19 @@
             <table border="0">
                 <tr>
                     <td>
-                        <p class="header" id="header0"></p>
+                        <p class="header" id="header_0"></p>
                     </td>
                     <td>
-                        <p class="status" id="status0"></p>
+                        <p class="status" id="status_0"></p>
                     </td>
                 </tr>
             </table>
 
             <div>
-                <canvas class="image" id="image0" width="_WIDTH_px" height="_HEIGHT_px"
-                        onclick="togglePause0()"></canvas>
+                <canvas class="image" id="image_0" width="_WIDTH_px" height="_HEIGHT_px"
+                        onclick="togglePause(0)"></canvas>
                 <div>
-                    <input type="button" class="pause" id="pause0" value="Pause" onclick="togglePause0()">
+                    <input type="button" class="pause" id="pause_0" value="Pause" onclick="togglePause(0)">
                 </div>
             </div>
         </td>
@@ -228,20 +187,20 @@
             <table border="0">
                 <tr>
                     <td>
-                        <p class="header" id="header1"></p>
+                        <p class="header" id="header_1"></p>
                     </td>
                     <td>
-                        <p class="status" id="status1"></p>
+                        <p class="status" id="status_1"></p>
                     </td>
                 </tr>
             </table>
 
             <div>
-                <canvas class="image" id="image1" width="_WIDTH_px" height="_HEIGHT_px"
-                        onclick="togglePause1()"></canvas>
+                <canvas class="image" id="image_1" width="_WIDTH_px" height="_HEIGHT_px"
+                        onclick="togglePause(1)"></canvas>
             </div>
             <div>
-                <input type="button" class="pause" id="pause1" value="Pause" onclick="togglePause1()">
+                <input type="button" class="pause" id="pause_1" value="Pause" onclick="togglePause(1)">
             </div>
         </td>
     </tr>
